--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-api-starter-ts",
   "version": "1.2.0",
   "description": " A basic starter for an express.js API with Typescript. Ilkka added gts",
-  "main": "src/index.ts",
+  "main": "dist/src/index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
