--- a/package.json
+++ b/package.json
@@ -19,20 +19,24 @@
   "license": "MIT",
   "dependencies": {
     "@types/geojson": "^7946.0.10",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "fetch": "^1.1.0",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
     "mongoose-type-url": "^2.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
